--- a/src/app/search-page/search-page.component.html
+++ b/src/app/search-page/search-page.component.html
@@ -27,16 +27,16 @@
             <mat-form-field appearance="fill" id="platform-select">
                 <mat-label for='platform' id="platform-label">Platform</mat-label>
                 <mat-select placeholder="platform" formControlName="platform">
-                   <mat-option value="PC~pc">PC (Windows)</mat-option>
-                   <mat-option value="PlayStation 5~playstation5">PlayStation 5</mat-option>
-                   <mat-option value="Xbox Series S/X~xbox-series-x">XBox Series X/S</mat-option>
-                   <mat-option value="PlayStation 4~playstation4">PlayStation 4</mat-option>
-                   <mat-option value="Xbox One~xbox-one">XBox One</mat-option>
-                   <mat-option value="PlayStation 3~playstation3">PlayStation 3</mat-option>
-                   <mat-option value="XBox 360~xbox360">XBox 360</mat-option>
-                   <mat-option value="Linux~linux">Linux</mat-option>
-                   <mat-option value="iOS~ios">iOS</mat-option>
-                   <mat-option value="Android~android">Android</mat-option>
+                   <mat-option value="PC~4">PC (Windows)</mat-option>
+                   <mat-option value="PlayStation 5~187">PlayStation 5</mat-option>
+                   <mat-option value="Xbox Series S/X~186">XBox Series X/S</mat-option>
+                   <mat-option value="PlayStation 4~18">PlayStation 4</mat-option>
+                   <mat-option value="Xbox One~1">XBox One</mat-option>
+                   <mat-option value="PlayStation 3~16">PlayStation 3</mat-option>
+                   <mat-option value="XBox 360~14">XBox 360</mat-option>
+                   <mat-option value="Linux~6">Linux</mat-option>
+                   <mat-option value="iOS~3">iOS</mat-option>
+                   <mat-option value="Android~21">Android</mat-option>
                 </mat-select>
             </mat-form-field>
             <!--Form group for multiplayer-->
