--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -4,6 +4,7 @@
     left: 0;
     height: 100%;
     width: 100%;
+    z-index: -1;
 }
 
 .container{
@@ -12,14 +13,38 @@
     position: relative;
     width: 100%;
     background-color: #eaeef0;
-    //z-index: -1;
+    z-index: 0;
     grid-template-areas: "a"
-                        " b";
+                         "b"
+                         "c";
     overflow: hidden;
 
 
-    .header-container{
+    .mode-container{
         grid-area: a;
+        width: 100%;
+        height: 40px;
+        background-color: #28282B;
+        z-index: 1;
+        display: flex;
+        color: white;
+        flex-direction: row;
+        align-items: center;
+        font-family: 'Open Sans Condensed', sans-serif;
+
+
+        mat-slide-toggle{
+            font-family: 'Open Sans Condensed', sans-serif !important;
+            margin: 20px;
+            font-size: 20px;
+        }
+
+        mat-icon{
+            margin-top: 6px;
+       }
+    }
+    .header-container{
+        grid-area: b;
         width: 100%;
         height: auto;
         position: relative;
@@ -31,9 +56,10 @@
         justify-content: space-around;
         align-items: center;
         text-align: center;
+        z-index: -2;
 
         .text-container{
-            margin-top: 50px;
+            margin-top: 20px;
             margin-bottom: 20px;
             width: 900px;
             height: 80vh;
@@ -44,8 +70,6 @@
             align-items: center;
             background-color: #eaeef0;
             border-radius: 50px;
-            border: 10px solid #eaeef0;
-            box-shadow: 10px 10px 20px rgba(0,0,0,0.2), -10px -10px 20px white, inset 10px 10px 20px rgba(0,0,0,0.2), inset -8px -8px 20px white;
             animation: startUp 2s;
 
 
@@ -80,7 +104,8 @@
             display: flex;
             font-family: 'Open Sans Condensed', sans-serif;
             color: white;
-            animation: wakeUp 3s;               
+            animation: wakeUp 3s;   
+
         }
 
         @keyframes startUp {
@@ -104,7 +129,7 @@
 
 
     .info-container{
-        grid-area: b;
+        grid-area: c;
         width: 100%;
         height: auto;
         display: flex;
