--- a/src/app/rec-page/rec-page.component.html
+++ b/src/app/rec-page/rec-page.component.html
@@ -1,7 +1,6 @@
-<div class="main-container">
-    <div class="search-container">
-     
-    
+<div class="main-container" [style.background-color]='color'>
+    <div class="mode-container">
+      <mat-slide-toggle (change)="onToggle($event)" [checked]='modeCheck'><mat-icon>brightness_high</mat-icon></mat-slide-toggle>
     </div>
     <div class="videogame-container">
       <div *ngFor="let item of RecommendationArray">
