--- a/src/app/rec-page/rec-page.component.scss
+++ b/src/app/rec-page/rec-page.component.scss
@@ -8,10 +8,29 @@
   flex-direction: row;
   flex-wrap: wrap;
 
-  .search-container{
-    
-  }
+  .mode-container{
+    grid-area: a;
+    width: 100%;
+    height: 40px;
+    background-color: #28282B;
+    z-index: 1;
+    display: flex;
+    color: white;
+    flex-direction: row;
+    align-items: center;
+    font-family: 'Open Sans Condensed', sans-serif;
 
+
+    mat-slide-toggle{
+        font-family: 'Open Sans Condensed', sans-serif !important;
+        margin: 20px;
+        font-size: 20px;
+    }
+
+    mat-icon{
+        margin-top: 6px;
+   }
+}
   .videogame-container{
     display: flex;
     flex-direction: row;
