--- a/src/app/search-page/search-page.component.html
+++ b/src/app/search-page/search-page.component.html
@@ -1,4 +1,7 @@
-<div class="main-flex">
+<div class="main-flex" [style.background-color]='color'>
+    <div class="mode-container">
+        <mat-slide-toggle (change)="onToggle($event)" [checked]='modeCheck'><mat-icon>brightness_high</mat-icon></mat-slide-toggle>
+    </div>
     <div class="search-flex">
         <form [formGroup]='formGroup' class='form-container' (ngSubmit)="processForm()" >
             <button mat-button class="clear-button" type="reset" id="reset-button">Clear</button>
