--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -2,6 +2,7 @@
     <div id="particles-js"></div>
     <div class="mode-container">
         <mat-slide-toggle (change)="onToggle($event)" [checked]='modeCheck'><mat-icon>brightness_high</mat-icon></mat-slide-toggle>
+        <mat-slide-toggle (change)="onScale($event)" [checked]='scaleCheck'><mat-icon>accessibility</mat-icon></mat-slide-toggle>
     </div>
     <div class="header-container">
         <div class="text-container" [style.background-color]='color' [style.color]='fontColor' [style.border-color]='borderColor'> 
@@ -20,7 +21,7 @@
     <mat-divider id="line"></mat-divider>
     <div class="info-container">
         <div class="info-card">
-            <div class="card-face" style="background-color: #ADE292;">
+            <div class="card-face" [style.background-color]='cardColorOne'>
                 <mat-icon class="icon">search</mat-icon>
             </div>
             <div class="card-content">
@@ -30,7 +31,7 @@
             </div>
         </div>
         <div class="info-card">
-            <div class="card-face" style="background-color: #A1A9FE;">
+            <div class="card-face"  [style.background-color]='cardColorTwo'>
                 <mat-icon class="icon">favorite</mat-icon>
             </div>
             <div class="card-content">
@@ -41,7 +42,7 @@
             </div>
         </div>
         <div class="info-card">
-            <div class="card-face" style="background-color: #4871E8;">
+            <div class="card-face"  [style.background-color]='cardColorThree'>
                 <mat-icon class="icon">timelapse</mat-icon>
             </div>
             <div class="card-content">
@@ -52,7 +53,7 @@
             </div>
         </div>
         <div class="info-card">
-            <div class="card-face" style="background-color: #AA1945;">
+            <div class="card-face"  [style.background-color]='cardColorFour'>
                 <mat-icon class="icon">star</mat-icon>
             </div>
             <div class="card-content">
