--- a/src/app/search-page/search-page.component.scss
+++ b/src/app/search-page/search-page.component.scss
@@ -1,97 +1,135 @@
 .main-flex{
-    height: auto;
-    width: 100%;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    background-color: #eaeef0;
-    justify-content: center;
-    min-height: 100vh;
-    //box-shadow: 5px 5px 10px rgba(0,0,0,0.2), -5px -5px 10px white, inset 5px 5px 10px rgba(0,0,0,0.2), inset -5px -5px 10px white;
+    width: 100%;
 
     .mode-container{
-        width: 100%;
-        height: 40px;
-        background-color: #28282B;
-        z-index: 1;
         display: flex;
-        color: white;
-        flex-direction: row;
+        height: 40px;
+        width: 100%;
         align-items: center;
-        font-family: 'Open Sans Condensed', sans-serif;
+        background-color: #28282B;
 
-
+        
         mat-slide-toggle{
             font-family: 'Open Sans Condensed', sans-serif !important;
             margin: 20px;
             font-size: 20px;
+            color: white;
+
+            mat-icon{
+                margin-top: 6px;
+            }
+        }
+    }
+
+    .info-container{
+        display: flex;
+        height: 250px;
+        width: 100%;
+        flex-direction: column;
+        text-align: left;
+        color: white;
+        text-align: center;
+        background-color: #28282B;
+
+
+        h1{
+            font-family: 'Open Sans Condensed', sans-serif;
+            padding: 10px;
+            font-size: 50px;
+            line-height: 50px;
+            position: relative;
+
+        }
+        
+        h1:before{
+            position: absolute;
+            content: '';
+            height: 5px;
+            width: 520px;
+            top: 100%;
+            background-color: aliceblue;
+            animation: startUp 2s;
         }
 
-        mat-icon{
-            margin-top: 6px;
-       }
+        @keyframes startUp {
+            0%{
+                width: 0px;
+                opacity: 0;
+            }
+            100%{
+                width: 520px;
+            }
+        }
+
+        p{
+            font-family: 'Open Sans Condensed', sans-serif;
+            padding: 20px;
+            font-size: 40px;
+            line-height: 42px;
+        }
+
     }
 
     .search-flex{
-        display: flex;
-        width: 80%;
-        height: 300px;
-        border: 1px solid black;
+        display: grid;
+        height: 100px;
+        width: 100%;
+        margin-top: 20px;
+        justify-content: center;
+        align-items: center;
+        grid-template-areas: 'a b c d e';
 
-        .form-container{
-            display: flex;
-            flex-direction: row;
-            flex-wrap: wrap;
-            justify-content: center;
-            align-items: center;
-            margin-left: 25%;
-
-            #genre-select{
-                font-family: 'Open Sans Condensed', sans-serif;
-                font-size: 18px; 
-                margin: 10px;
-   
-            }
-    
-            #genre-label{
-                font-size: 22px;
-            }
-    
-            #submit-button{
-                font-family: 'Open Sans Condensed', sans-serif;
-                background-color: #228B22;
-                color: white;
-                font-size: 25px;
-                margin-left: 20px;
-            }
-    
-            #reset-button{
-                font-family: 'Open Sans Condensed', sans-serif;
-                background-color: #D22B2B;
-                color: white;
-                font-size: 25px;
-                margin-right: 20px;
-            }
-    
-            #platform-select{
-                font-family: 'Open Sans Condensed', sans-serif;
-                font-size: 18px;
-                margin: 10px;
-    
-            }
-    
-            #platform-label{
-                font-size: 22px;
-
-            }
-    
-            #multi-label{
-                font-family: 'Open Sans Condensed', sans-serif;
-                font-size: 22px;
-                margin: 10px;
-            }
+        #reset-button{
+            font-family: 'Open Sans Condensed', sans-serif;
+            background-color: #D22B2B;
+            color: white;
+            font-size: 25px;
+            margin-right: 20px;
+            grid-area: a;
         }
-    
+
+        #genre-select{
+            font-family: 'Open Sans Condensed', sans-serif;
+            font-size: 18px; 
+            margin: 10px;
+            grid-area: b;
+
+        }
+
+        #genre-label{
+            font-size: 22px;
+        }
+
+        #platform-select{
+            font-family: 'Open Sans Condensed', sans-serif;
+            font-size: 18px;
+            margin: 10px;
+            grid-area: c;
+        }
+
+        #platform-label{
+            font-size: 22px;
+        }     
+
+        #multi-label{
+            font-family: 'Open Sans Condensed', sans-serif;
+            font-size: 22px;
+            margin: 10px;
+            grid-area: d;
+        }
+
+        #submit-button{
+            font-family: 'Open Sans Condensed', sans-serif;
+            background-color: #228B22;
+            color: white;
+            font-size: 25px;
+            margin-left: 20px;
+            grid-area: e;
+
+        }
     }
     
     .card-flex{
@@ -100,48 +138,10 @@
         flex-wrap: wrap;
         width: 100%;
         height: auto;
+        min-height: 800px;
 
         justify-content: space-around;
         align-items: center;
     }
-    
 }
-
-
-
-@media only screen and (max-width: 1000px){
-    .main-flex{
-        .search-flex{
-           .form-container{
-               flex-direction: column;
-
-               #genre-select{
-                margin: 00px;
-   
-            }
-    
-            #submit-button{
-                margin-left: 0px;
-            }
-    
-            #reset-button{
-                margin-right: 0px;
-            }
-    
-            #platform-select{
-                margin: 0px;
-    
-            }
-        
-            #multi-label{
-                margin: 0px;
-            }
-           }
-
-        }
-
-
-    }
-}
-
 
