--- a/src/app/videogame-card/videogame-card.component.html
+++ b/src/app/videogame-card/videogame-card.component.html
@@ -1,5 +1,5 @@
 <div class="card-flex">
-    <div class="image-flex">
+    <div class="image-flex" [style.filter]='filter'>
         <img src={{gameCoverArt}}>
     </div>
     <div class="header-flex">
