--- a/src/app/rec-page2/rec-page2.component.scss
+++ b/src/app/rec-page2/rec-page2.component.scss
@@ -1,15 +1,10 @@
 .main-container{
-    display: flex;
-    height: 100vh;
-    max-width: 100vw;
-    background-color: #eaeef0;
-    justify-content: center;
-    align-items: flex-start;
-    flex-direction: row;
-    flex-wrap: wrap;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
     
     .mode-container{
-      grid-area: a;
       width: 100%;
       height: 40px;
       background-color: #28282B;
@@ -29,19 +24,81 @@
 
       mat-icon{
           margin-top: 6px;
-     }
+    }
+  }
+
+  .info-container{
+    position: relative;
+    display: flex;
+    height: 250px;
+    width: 100%;
+    flex-direction: column;
+    text-align: left;
+    color: white;
+    text-align: center;
+    background-color: #28282B;
+
+
+    h1{
+        font-family: 'Open Sans Condensed', sans-serif;
+        padding: 10px;
+        font-size: 50px;
+        line-height: 50px;
+        position: relative;
+
+    }
+    
+    h1:before{
+        position: absolute;
+        content: '';
+        height: 5px;
+        width: 520px;
+        top: 100%;
+        background-color: aliceblue;
+        animation: startUp 2s;
+    }
+
+    @keyframes startUp {
+        0%{
+            width: 0px;
+            opacity: 0;
+        }
+        100%{
+            width: 520px;
+        }
+    }
+
+    p{
+        font-family: 'Open Sans Condensed', sans-serif;
+        padding: 20px;
+        font-size: 40px;
+        line-height: 42px;
+    }
+
   }
 
     .search-container{
-      margin-top: 50px;
       display: flex;
-      width: 30%;
-      height: 200px;
-      border-radius: 20px;
-      box-shadow: 5px 5px 10px rgba(0,0,0,0.2), -5px -5px 10px white, inset 5px 5px 10px rgba(0,0,0,0.2), inset -5px -5px 10px white;
+      flex-direction: row;
+      justify-content: center;
       align-items: center;
-      justify-content: space-around;
-      border: 10px solid #eaeef0;
+      width: 100%;
+      height: 100px;
+
+      #submit-button{
+        font-family: 'Open Sans Condensed', sans-serif;
+        background-color: #228B22;
+        color: white;
+        font-size: 25px;
+        margin-left: 20px;
+        grid-area: e;
+
+      }
+
+      #year-input{
+        font-family: 'Open Sans Condensed', sans-serif;
+        font-size: 22px;
+      }
     }
 
     .videogame-container{
@@ -49,6 +106,7 @@
       flex-direction: row;
       flex-wrap: wrap;
       width: 100%;
+      min-height: 800px;
       height: auto;
 
       justify-content: space-around;
