--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -17,8 +17,6 @@
     grid-template-areas: "a"
                          "b"
                          "c";
-    overflow: hidden;
-
 
     .mode-container{
         grid-area: a;
@@ -32,7 +30,6 @@
         align-items: center;
         font-family: 'Open Sans Condensed', sans-serif;
 
-
         mat-slide-toggle{
             font-family: 'Open Sans Condensed', sans-serif !important;
             margin: 20px;
@@ -43,6 +40,7 @@
             margin-top: 6px;
        }
     }
+
     .header-container{
         grid-area: b;
         width: 100%;
@@ -52,7 +50,7 @@
         overflow: hidden;
         display: flex;
         flex-direction: row;
-        flex-wrap: wrap-reverse;
+        flex-wrap: wrap;
         justify-content: space-around;
         align-items: center;
         text-align: center;
@@ -70,7 +68,6 @@
             align-items: center;
             background-color: #eaeef0;
             border-radius: 50px;
-            animation: startUp 2s;
 
 
             p:first-of-type{
@@ -94,8 +91,6 @@
                 border-radius: 20px;
                 
             }
-
-
         }
     
         .logo-container{
@@ -104,16 +99,9 @@
             display: flex;
             font-family: 'Open Sans Condensed', sans-serif;
             color: white;
-            animation: wakeUp 1s;   
 
         }
-
-
-
-       
-
     }
-
 
     .info-container{
         grid-area: c;
@@ -124,7 +112,6 @@
         flex-wrap: wrap;
         justify-content: center;
         align-items: center;
-        
 
         .info-card{
             position: relative;
@@ -182,11 +169,7 @@
                 font-size: 60px;
                 margin-bottom: 30px;
             }
-            
-        
-
         }
-
     }
 
     .info-container .info-card:hover .card-face{
@@ -202,9 +185,85 @@
        margin-top: 5px;
        transform: scale(4);
     }
-
-    
-    
-
 }
 
+
+@media only screen and (max-width: 780px) {
+    .container{
+        
+        .header-container{
+            flex-wrap: wrap;
+            z-index: 10;
+            margin-bottom: 50px;
+
+            .logo-container{
+                width: 100%;
+                height: 400px;
+            }
+
+            .text-container{
+                width: 90%;
+                height: auto;
+               
+
+                p:first-of-type{
+                    font-size: 80px;
+                    margin-bottom: 70px;
+                    line-height: 80px;
+                }
+    
+                p{
+                    width: 80%;
+                    font-size: 40px;
+                    line-height: 45px;
+                    margin-bottom: 50px;
+                }
+    
+                button{
+                    font-family: 'Open Sans Condensed', sans-serif;
+                    font-size: 40px;
+                    height: 70px;
+                    background-color: #28282B;
+                    color: white;
+                    border-radius: 20px;
+                    z-index: 10;
+                    
+                }
+            }
+        }
+
+        .info-container{    
+
+            .info-card{
+                width: 90vw;
+                height: 600px;
+                margin: 0px;
+                margin-bottom: 50px;
+
+                .card-content{
+                    font-size: 30px;
+                    margin-top: 40%;
+                }
+
+                .card-content p:first-of-type{
+                    font-size: 50px;
+                    margin-bottom: 20px;
+                }
+            }
+        }
+
+        .info-container .info-card:hover .card-face{
+            left: 38%;
+            top: 5%;
+            border-radius: 50%;
+            width: 130px;
+            height: 130px;
+            transition-delay: 0.5s;
+        }
+    
+        .info-container .info-card:hover .card-face mat-icon{
+           margin-top: 5px;
+           transform: scale(4);
+        }
+    }
+}
