--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -20,7 +20,7 @@
     </div>
     <div class="info-container">
         <div class="info-card">
-            <div class="card-face" [style.background-color]='cardColorOne'>
+            <div class="card-face" onclick="" [style.background-color]='cardColorOne'>
                 <mat-icon class="icon">search</mat-icon>
             </div>
             <div class="card-content">
@@ -30,7 +30,7 @@
             </div>
         </div>
         <div class="info-card">
-            <div class="card-face"  [style.background-color]='cardColorTwo'>
+            <div class="card-face"  onclick="" [style.background-color]='cardColorTwo'>
                 <mat-icon class="icon">favorite</mat-icon>
             </div>
             <div class="card-content">
@@ -41,7 +41,7 @@
             </div>
         </div>
         <div class="info-card">
-            <div class="card-face"  [style.background-color]='cardColorThree'>
+            <div class="card-face"  onclick="" [style.background-color]='cardColorThree'>
                 <mat-icon class="icon">timelapse</mat-icon>
             </div>
             <div class="card-content">
@@ -52,7 +52,7 @@
             </div>
         </div>
         <div class="info-card">
-            <div class="card-face"  [style.background-color]='cardColorFour'>
+            <div class="card-face"  onclick="" [style.background-color]='cardColorFour'>
                 <mat-icon class="icon">star</mat-icon>
             </div>
             <div class="card-content">
