--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -24,6 +24,7 @@
                 <mat-icon class="icon">search</mat-icon>
             </div>
             <div class="card-content">
+                <mat-icon class="icon">search</mat-icon>
                 <p>Search</p>
                 <p>Find an exhilarating new game to play with the search feature. Search through
                 different genres and platforms and use tweets to see what people say about it! </p>
@@ -34,6 +35,7 @@
                 <mat-icon class="icon">favorite</mat-icon>
             </div>
             <div class="card-content">
+                <mat-icon class="icon">favorite</mat-icon>
                 <p>Popular</p>
                 <p>Find the most popular and streamed games on the market today! Use the 
                     popular feature in order to see what games have the most attention.
@@ -45,6 +47,7 @@
                 <mat-icon class="icon">timelapse</mat-icon>
             </div>
             <div class="card-content">
+                <mat-icon class="icon">timelapse</mat-icon>
                 <p>Retro</p>
                 <p>Be nostalgic with the retro feature! Put in your birthday to find the 
                     best games that were released in the year that you were born!
@@ -56,6 +59,7 @@
                 <mat-icon class="icon">star</mat-icon>
             </div>
             <div class="card-content">
+                <mat-icon class="icon">star</mat-icon>
                 <p>Favorite</p>
                 <p>Find your new favorite game with the favorite feature! Enter in two of your favorite games 
                     and find your new favorite of the year!
