--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -149,19 +149,23 @@
             }
             
             .card-content{
-                margin-top: 35%;
-                margin-left: 16%;
-                height: 100%;
-                width: 70%;
-                display: flex;
-                flex-direction: column;
-                flex-wrap: wrap;
-                text-align: center;
                 z-index: 15;
                 font-family: 'Open Sans Condensed', sans-serif;
                 color: white;
                 font-size: 40px;
                 line-height: 50px;
+                display: flex;
+                width: 70%;
+                height: 100%;
+                flex-direction: column;
+                text-align: center;
+                justify-content: center;
+                align-items: center;
+                margin-left: 16%;
+
+                mat-icon{
+                    visibility: hidden;
+                }
 
             }
 
@@ -236,22 +240,24 @@
 
                 .card-content{
                     font-size: 30px;
-                    margin-top: 40%;
+
+
+                    mat-icon{
+                        transform: scale(4);
+                        visibility: visible;
+                        margin-bottom: 60px;
+                    }
                 }
 
                 .card-content p:first-of-type{
                     font-size: 50px;
                     margin-bottom: 20px;
                 }
-            }
-        }
 
-        .info-container .info-card:hover .card-face{
-            left: 36%;
-        }
-    
-        .info-container .info-card:hover .card-face mat-icon{
-           margin-top: 5px;
+                .card-face{
+                    visibility: hidden;
+                }
+            }
         }
     }
 }
