--- a/src/app/rec-page3/rec-page3.component.scss
+++ b/src/app/rec-page3/rec-page3.component.scss
@@ -87,16 +87,14 @@
       width: 100%;
       height: 100px;
       position: relative;
-      margin-top: 10px;
+      margin-top: 20px;
 
       .left-search{
         display: flex;
         justify-content: center;
         align-items: center;
-        width: 50%;
+        width: 100%;
         height: inherit;
-        position: absolute;
-
         
         #submit-button{
           font-family: 'Open Sans Condensed', sans-serif;
@@ -116,14 +114,14 @@
       }
       .right-search{
         display: flex;
-        justify-self: center;
+        justify-content: center;
         align-items: center;
-        width: 50%;
+        width: 100%;
         height: inherit;
         position: absolute;
-        left: 38%;
-
-        
+        top: 40%;
+        left: 2%;    
+    
         #submit-button{
           font-family: 'Open Sans Condensed', sans-serif;
           background-color: #228B22;
@@ -159,4 +157,52 @@
     }
 
   
+}
+
+@media only screen and (max-width: 780px) {
+  .main-container{
+    .info-container{
+      height: 280px;
+      h1{
+        font-size: 40px;
+        line-height: 40px;  
+      } 
+      h1:before{
+          height: 5px;
+          width: 440px;
+      }
+  
+      @keyframes startUp {
+          0%{
+              width: 0px;
+              opacity: 0;
+          }
+          100%{
+              width: 440px;
+          }
+      }
+
+      p{
+          font-size: 30px;
+          line-height: 32px;
+      }
+    }
+
+    .search-container{  
+      .left-search{
+        #submit-button{
+          margin-left: 0px;
+        }
+      }
+
+      .right-search{
+        mat-form-field{
+          margin-left: 30%;
+        }
+        #submit-button{
+          margin-left: 40%;
+        }    
+      }
+    }
+  }
 }
