--- a/src/app/search-page/search-page.component.scss
+++ b/src/app/search-page/search-page.component.scss
@@ -77,7 +77,7 @@
         display: grid;
         height: 100px;
         width: 100%;
-        margin-top: 20px;
+        margin-top: 30px;
         justify-content: center;
         align-items: center;
         grid-template-areas: 'a b c d e';
@@ -145,3 +145,91 @@
     }
 }
 
+@media only screen and (max-width: 850px) {
+    .main-flex{
+        .info-container{
+            height: 280px;
+            h1{
+              font-size: 40px;
+              line-height: 40px;  
+            } 
+            h1:before{
+                height: 5px;
+                width: 410px;
+            }
+        
+            @keyframes startUp {
+                0%{
+                    width: 0px;
+                    opacity: 0;
+                }
+                100%{
+                    width: 410px;
+                }
+            }
+      
+            p{
+                font-size: 30px;
+                line-height: 32px;
+            }
+        }    
+    }
+}
+
+@media only screen and (max-width: 850px) {
+    .main-flex{
+        .search-flex{
+            display: block;
+            flex-direction: column;
+
+            #reset-button{
+                display: flex;
+                font-family: 'Open Sans Condensed', sans-serif;
+                background-color: #D22B2B;
+                color: white;
+                font-size: 25px;
+                margin-left: 45vw;
+            }
+    
+            #genre-select{
+                display: flex;
+                font-family: 'Open Sans Condensed', sans-serif;
+                font-size: 18px; 
+                margin-left: 34vw;
+    
+            }
+    
+            #genre-label{
+                font-size: 22px;
+            }
+    
+            #platform-select{
+                display: flex;
+                font-family: 'Open Sans Condensed', sans-serif;
+                font-size: 18px;
+                margin-left: 34vw;
+            }
+    
+            #platform-label{
+                font-size: 22px;
+            }     
+    
+            #multi-label{
+                display: flex;
+                font-family: 'Open Sans Condensed', sans-serif;
+                font-size: 22px;
+                margin-left: 40vw;
+            }
+    
+            #submit-button{
+                display: flex;
+                font-family: 'Open Sans Condensed', sans-serif;
+                background-color: #228B22;
+                color: white;
+                font-size: 25px;
+                margin-left: 45vw;
+                margin-top: 20px;
+            }
+        }
+    }
+}
