--- a/src/app/rec-page2/rec-page2.component.scss
+++ b/src/app/rec-page2/rec-page2.component.scss
@@ -45,29 +45,11 @@
         font-size: 50px;
         line-height: 50px;
         position: relative;
+        margin-top: 10px;
+        width: 90%;
 
     }
     
-    h1:before{
-        position: absolute;
-        content: '';
-        height: 5px;
-        width: 520px;
-        top: 100%;
-        background-color: aliceblue;
-        animation: startUp 2s;
-    }
-
-    @keyframes startUp {
-        0%{
-            width: 0px;
-            opacity: 0;
-        }
-        100%{
-            width: 520px;
-        }
-    }
-
     p{
         font-family: 'Open Sans Condensed', sans-serif;
         padding: 20px;
@@ -117,7 +99,7 @@
 @media only screen and (max-width: 780px) {
     .main-container{
       .info-container{
-        height: 280px;
+        height: 350px;
         h1{
           font-size: 40px;
           line-height: 40px;  
