--- a/src/app/rec-page3/rec-page3.component.scss
+++ b/src/app/rec-page3/rec-page3.component.scss
@@ -45,28 +45,10 @@
       font-size: 50px;
       line-height: 50px;
       position: relative;
+      margin-top: 10px;
 
   }
-  
-  h1:before{
-      position: absolute;
-      content: '';
-      height: 5px;
-      width: 520px;
-      top: 100%;
-      background-color: aliceblue;
-      animation: startUp 2s;
-  }
 
-  @keyframes startUp {
-      0%{
-          width: 0px;
-          opacity: 0;
-      }
-      100%{
-          width: 520px;
-      }
-  }
 
   p{
       font-family: 'Open Sans Condensed', sans-serif;
@@ -162,7 +144,7 @@
 @media only screen and (max-width: 780px) {
   .main-container{
     .info-container{
-      height: 280px;
+      height: 420px;
       h1{
         font-size: 40px;
         line-height: 40px;  
